<resources>
    <string name="app_name">Task</string>
    <string name="tasks">Tasks</string>
    <string name="create">Create</string>
    <string name="to">To</string>
    <string name="Do">Do</string>
    <string name="create_task">Create task</string>
    <string name="create_group">Create group</string>
    <string name="enter_task">Enter task</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="subtasks">Subtasks</string>
    <string name="completed">Completed</string>
    <string name="uncompleted">Uncompleted</string>
</resources>