<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bleached_silk">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/enter_task"
        android:textColor="@color/white"
        android:textColorHint="@color/bleached_silk_light"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:textColor="@color/white"
        android:textColorHint="@color/bleached_silk_light"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/description_image_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icon_description"
            android:backgroundTint="#00FFFFFF"/>

        <CheckBox
            android:id="@+id/add_to_favorite_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/icon_star_border"
            android:checked="false"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/save_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/orange"
            android:background="#00FFFFFF"/>


    </LinearLayout>

</LinearLayout>