<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bleached_silk">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/black">

        <ImageButton
            android:id="@+id/go_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back"
            android:backgroundTint="@color/transparent" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/add_to_favorite_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/icon_star_border"
            android:backgroundTint="@color/transparent" />

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_delete"
            android:backgroundTint="@color/transparent"/>


    </LinearLayout>

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textColorHint="@color/bleached_silk_light"
        android:padding="4dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_description"
        android:hint="@string/enter_description"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textColorHint="@color/bleached_silk_light"
        android:inputType="text"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="Sub"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_background"
            android:text="tasks"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/add_subtask_image_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icon_add"
            android:backgroundTint="@color/transparent" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subtasks_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/add_to_completed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:textColor="@color/orange"
        android:textAllCaps="false"
        android:text="@string/completed"
        android:layout_gravity="end"/>


</LinearLayout>